Styling fixes when disabled
Also adds build status and faster build for CI

--- a/labelbutton-addon/src/main/resources/VAADIN/addons/labelbutton/labelbutton.scss
+++ b/labelbutton-addon/src/main/resources/VAADIN/addons/labelbutton/labelbutton.scss
@@ -28,11 +28,11 @@
         }
       }
 
-      &.lb-pointer {
+      &.lb-pointer:not(.v-disabled) {
         cursor: pointer;
       }
 
-      &.lb-hover-underline:hover {
+      &.lb-hover-underline:hover:not(.v-disabled) {
         text-decoration: underline;
       }
     }
