--- a/labelbutton-addon/src/main/resources/VAADIN/addons/labelbutton/labelbutton.scss
+++ b/labelbutton-addon/src/main/resources/VAADIN/addons/labelbutton/labelbutton.scss
@@ -8,7 +8,8 @@
 
 @mixin labelbutton {
   .labelbutton {
-    $labelbutton-clickable-color: blue !default;
+    $v-link-font-color: blue !default;
+    $labelbutton-clickable-color: $v-link-font-color !default;
 
     @include label-button($labelbutton-clickable-color);
 
