--- a/labelbutton-addon/src/main/resources/VAADIN/addons/labelbutton/labelbutton.scss
+++ b/labelbutton-addon/src/main/resources/VAADIN/addons/labelbutton/labelbutton.scss
@@ -40,5 +40,12 @@
         text-decoration: underline;
       }
     }
+
+    &.lb-preventselect {
+      -moz-user-select: none;
+      -webkit-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
+    }
   }
 }
