--- a/labelbutton-demo/src/main/webapp/VAADIN/themes/demo/styles.scss
+++ b/labelbutton-demo/src/main/webapp/VAADIN/themes/demo/styles.scss
@@ -9,4 +9,11 @@
 
   	@include addons;
 
+  .normal-label {
+	-moz-user-select: none;
+	-webkit-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+  }
+
 }
